Basic logiks works. Missing game over logic

--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-
+    <div id="winOutput"></div>
+    <div id="results">
+    </div>
+    <p id="playerScore">You: 0</p>
+    <p id="computerScore">Computer: 0</p>
+    <button id="rockBtn">Rock</button>
+    <button id="paperBtn">Paper</button>
+    <button id="scissorsBtn">Scissors</button>
 </body>
 </html>
