--- a/index.html
+++ b/index.html
@@ -7,13 +7,21 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div id="winOutput"></div>
-    <div id="results">
+    <div style="margin:auto; width: fit-content; text-align: center;" >
+        <h1>Rock, Paper, Scissors</h1>
+        <p>Rules: Who gets 5 points first wins</p>
+        <div>
+            <div id="winOutput"></div>
+            <div id="results">
+            </div>
+            <p id="playerScore">You: 0</p>
+            <p id="computerScore">Computer: 0</p>
+            <button id="rockBtn">Rock</button>
+            <button id="paperBtn">Paper</button>
+            <button id="scissorsBtn">Scissors</button>
+        </div>
+        
     </div>
-    <p id="playerScore">You: 0</p>
-    <p id="computerScore">Computer: 0</p>
-    <button id="rockBtn">Rock</button>
-    <button id="paperBtn">Paper</button>
-    <button id="scissorsBtn">Scissors</button>
+    
 </body>
 </html>
